crates/integration-tests/src/tests/snapshots/integration_tests__tests__aggregation__aggregates_mixture_of_numeric_and_null_values.snap
---
source: crates/integration-tests/src/tests/aggregation.rs
expression: "graphql_query(r#\"\n                query ($types: String!) {\n                  extendedJsonTestDataAggregate(\n                    filter_input: { where: { type: { _regex: $types } } }\n                  ) {\n                    value {\n                      avg\n                      _count\n                      max\n                      min\n                      sum\n                      _count_distinct\n                    }\n                  }\n                  extendedJsonTestData(where: { type: { _regex: $types } }) {\n                    type\n                    value\n                  }\n                }\n            \"#).variables(json!({\n    \"types\": \"double|null\"\n})).run().await?"
---
data:
  extendedJsonTestDataAggregate:
    value:
      avg:
        $numberDouble: "3.5"
      _count: 2
      max:
        $numberDouble: "4.0"
      min:
        $numberDouble: "3.0"
      sum:
        $numberDouble: "7.0"
      _count_distinct: 2
  extendedJsonTestData:
    - type: double
      value:
        $numberDouble: "3.0"
    - type: double
      value:
        $numberDouble: "4.0"
    - type: "null"
      value: ~
errors: ~
