crates/integration-tests/src/tests/snapshots/integration_tests__tests__aggregation__returns_zero_when_counting_empty_result_set.snap
---
source: crates/integration-tests/src/tests/aggregation.rs
expression: "graphql_query(r#\"\n            query {\n              moviesAggregate(filter_input: {where: {title: {_eq: \"no such movie\"}}}) {\n                _count\n                title {\n                  count\n                }\n              }\n            }\n            \"#).run().await?"
---
data:
  moviesAggregate:
    _count: 0
    title:
      count: 0
errors: ~
